--- a/packages/sanity-suite/public/v1.1/index-local.html
+++ b/packages/sanity-suite/public/v1.1/index-local.html
@@ -23,22 +23,19 @@
         window.OnetrustActiveGroups = ',C0001,C0003,';
         rudderanalytics = window.rudderanalytics = [];
         var methods = [
-            'load',
-            'page',
-            'track',
-            'identify',
-            'alias',
-            'group',
-            'ready',
-            'reset',
-            'getAnonymousId',
-            'setAnonymousId',
-            'getUserId',
-            'getUserTraits',
-            'getGroupId',
-            'getGroupTraits',
-            'endSession',
-            'startSession',
+          'load',
+          'ready',
+          'page',
+          'track',
+          'identify',
+          'alias',
+          'group',
+          'reset',
+          'getAnonymousId',
+          'setAnonymousId',
+          'startSession',
+          'endSession',
+          'getSessionId'
         ];
 
         for (var i = 0; i < methods.length; i++) {
