--- a/packages/sanity-suite/public/v3/index-local.html
+++ b/packages/sanity-suite/public/v3/index-local.html
@@ -6,87 +6,100 @@
     <title>RudderStack JS SDK Sanity Suite</title>
 
     <script>
-        window.OneTrust = {
-            GetDomainData: function () {
-            return {
-                Groups: [
-                { CustomGroupId: 'C0001', GroupName: 'Functional Cookies' },
-                { CustomGroupId: 'C0002', GroupName: 'Performance Cookies' },
-                { CustomGroupId: 'C0003', GroupName: 'Analytical Cookies' },
-                { CustomGroupId: 'C0004', GroupName: 'Targeting Cookies' },
-                { CustomGroupId: 'C0005', GroupName: 'Social Media Cookies' },
-                { CustomGroupId: 'C0006', GroupName: 'Advertisement Cookies' }
-                ]
-            };
-            }
-        };
-        window.OnetrustActiveGroups = ',C0001,C0003,';
-        rudderanalytics = window.rudderanalytics = [];
-        var methods = [
-          'setDefaultInstanceKey',
-          'getAnalyticsInstance',
-          'load',
-          'ready',
-          'page',
-          'track',
-          'identify',
-          'alias',
-          'group',
-          'reset',
-          'getAnonymousId',
-          'setAnonymousId',
-          'getUserId',
-          'getUserTraits',
-          'getGroupId',
-          'getGroupTraits',
-          'startSession',
-          'endSession',
-          'getSessionId'
-        ];
-
-        for (var i = 0; i < methods.length; i++) {
-            var method = methods[i];
-            rudderanalytics[method] = (function (methodName) {
-                return function () {
-                    rudderanalytics.push(
-                        [methodName].concat(Array.prototype.slice.call(arguments))
-                    );
-                };
-            })(method);
+      window.OneTrust = {
+        GetDomainData: function () {
+          return {
+            Groups: [
+              { CustomGroupId: 'C0001', GroupName: 'Functional Cookies' },
+              { CustomGroupId: 'C0002', GroupName: 'Performance Cookies' },
+              { CustomGroupId: 'C0003', GroupName: 'Analytical Cookies' },
+              { CustomGroupId: 'C0004', GroupName: 'Targeting Cookies' },
+              { CustomGroupId: 'C0005', GroupName: 'Social Media Cookies' },
+              { CustomGroupId: 'C0006', GroupName: 'Advertisement Cookies' }
+            ]
+          };
         }
-        // Sets the user ID/anonymous ID
-        // Sending these Identify and Track event to test the preload buffer
-        rudderanalytics.setAnonymousId("automationqa_123");
+      };
+      window.OnetrustActiveGroups = ',C0001,C0003,';
 
-        // Identify call
-        rudderanalytics.identify("12345", {
-            name: "Automation QA"
-        });
+      var sdkBaseUrl = "https://cdn.rudderlabs.com/beta/3.0.0-beta";
+      var sdkName = "rudder-analytics.min.js";
+      var asyncScript = true;
+      window.rudderAnalyticsBuildType = "legacy";
+      window.rudderanalytics = [];
+      var methods = [ "setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "getAnonymousId", "setAnonymousId", "startSession", "endSession", "getSessionId" ];
+      for (var i = 0; i < methods.length; i++) {
+        var method = methods[i];
+        window.rudderanalytics[method] = function(methodName) {
+          return function() {
+            window.rudderanalytics.push([ methodName ].concat(Array.prototype.slice.call(arguments)));
+          };
+        }(method);
+      }
+      try {
+        new Function('return import("")');
+        window.rudderAnalyticsBuildType = "modern";
+      } catch (e) {}
+      window.rudderAnalyticsMount = function() {
+        var rudderAnalyticsScript = document.createElement("script");
+        rudderAnalyticsScript.src = "".concat(sdkBaseUrl, "/").concat(window.rudderAnalyticsBuildType, "/").concat(sdkName);
+        rudderAnalyticsScript.async = asyncScript;
+        // if (document.head) {
+        //   document.head.appendChild(rudderAnalyticsScript);
+        // } else {
+        //   document.body.appendChild(rudderAnalyticsScript);
+        // }
+      };
+      if (typeof Promise === "undefined") {
+        var rudderAnalyticsPromisesScript = document.createElement("script");
+        rudderAnalyticsPromisesScript.src = "https://polyfill.io/v3/polyfill.min.js?features=globalThis%2CPromise&callback=rudderAnalyticsMount";
+        rudderAnalyticsPromisesScript.async = asyncScript;
+        if (document.head) {
+          document.head.appendChild(rudderAnalyticsPromisesScript);
+        } else {
+          document.body.appendChild(rudderAnalyticsPromisesScript);
+        }
+      } else {
+        window.rudderAnalyticsMount();
+      }
+      // New addition to load script ends
 
-        // Track call
-        rudderanalytics.track("test event", {
-          testProp: "automationQA_prop1"
-        });
+      // Sets the user ID/anonymous ID
+      // Sending these Identify and Track event to test the preload buffer
+      rudderanalytics.setAnonymousId("automationqa_123");
 
-        rudderanalytics.load(
-            '__WRITE_KEY__',
-            '__DATAPLANE_URL__',
-            {
-                logLevel: 'DEBUG',
-                configUrl: '__CONFIG_SERVER_HOST__',
-                lockIntegrationsVersion: true,
-                destSDKBaseURL: '__DEST_SDK_BASE_URL__',
-                cookieConsentManager: {
-                    oneTrust: {
-                        enabled: true,
-                    }
-                }
-            }
-        );
+      // Identify call
+      rudderanalytics.identify("12345", {
+        name: "Automation QA"
+      });
 
-        rudderanalytics.ready(function() {
-            console.log('We are all set!!!');
-        });
+      // Track call
+      rudderanalytics.track("test event", {
+        testProp: "automationQA_prop1"
+      });
+
+      var loadOptions={
+        logLevel: 'DEBUG',
+        configUrl: '__CONFIG_SERVER_HOST__',
+        destSDKBaseURL: '__DEST_SDK_BASE_URL__' + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
+        pluginsSDKBaseURL: '__REMOTE_MODULES_BASE_PATH__' + '/' + window.rudderAnalyticsBuildType + '/plugins',
+        lockIntegrationsVersion: true,
+        cookieConsentManager: {
+          oneTrust: {
+            enabled: true,
+          },
+        },
+      };
+
+      rudderanalytics.load(
+        '__WRITE_KEY__',
+        '__DATAPLANE_URL__',
+        loadOptions
+      );
+
+      rudderanalytics.ready(function () {
+        console.log('We are all set!!!');
+      });
     </script>
     <link
       rel="stylesheet"
