--- a/packages/sanity-suite/public/v3/preloadBuffer/index-npm.html
+++ b/packages/sanity-suite/public/v3/preloadBuffer/index-npm.html
@@ -21,37 +21,31 @@
         }
       };
       window.OnetrustActiveGroups = ',C0001,C0003,';
-      rudderanalytics = window.rudderanalytics = [];
-      var methods = [
-        'setDefaultInstanceKey',
-        'getAnalyticsInstance',
-        'load',
-        'ready',
-        'page',
-        'track',
-        'identify',
-        'alias',
-        'group',
-        'reset',
-        'getAnonymousId',
-        'setAnonymousId',
-        'getUserId',
-        'getUserTraits',
-        'getGroupId',
-        'getGroupTraits',
-        'startSession',
-        'endSession',
-        'getSessionId'
-      ];
 
+      window.rudderanalytics = [];
+      var methods = [ "setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "getAnonymousId", "setAnonymousId", "startSession", "endSession", "getSessionId" ];
       for (var i = 0; i < methods.length; i++) {
         var method = methods[i];
-        rudderanalytics[method] = (function (methodName) {
-          return function () {
-            rudderanalytics.push([methodName].concat(Array.prototype.slice.call(arguments)));
+        window.rudderanalytics[method] = function(methodName) {
+          return function() {
+            window.rudderanalytics.push([ methodName ].concat(Array.prototype.slice.call(arguments)));
           };
-        })(method);
+        }(method);
       }
+
+      // Sets the user ID/anonymous ID
+      // Sending these Identify and Track event to test the preload buffer
+      rudderanalytics.setAnonymousId("automationqa_123");
+
+      // Identify call
+      rudderanalytics.identify("12345", {
+        name: "Automation QA"
+      });
+
+      // Track call
+      rudderanalytics.track("test event", {
+        testProp: "automationQA_prop1"
+      });
     </script>
     <link
       rel="stylesheet"
