--- a/packages/sanity-suite/public/v3/index-local.html
+++ b/packages/sanity-suite/public/v3/index-local.html
@@ -23,7 +23,7 @@
       window.OnetrustActiveGroups = ',C0001,C0003,';
 
       var sdkBaseUrl = "https://cdn.rudderlabs.com/beta/3.0.0-beta";
-      var sdkName = "rudder-analytics.min.js";
+      var sdkName = "rsa.min.js";
       var asyncScript = true;
       window.rudderAnalyticsBuildType = "legacy";
       window.rudderanalytics = [];
@@ -136,7 +136,7 @@
         overflow: hidden;
       }
     </style>
-    <script async src="./rudder-analytics.min.js"></script>
+    <script async src="./rsa.min.js"></script>
 </head>
 <body>
 
