--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <script>
       var sdkBaseUrl = "https://cdn.rudderlabs.com/beta/3.0.0-beta";
-      var sdkName = "rudder-analytics.min.js";
+      var sdkName = "rsa.min.js";
       var asyncScript = true;
       window.rudderAnalyticsBuildType = "legacy";
       window.rudderanalytics = [];
