--- a/packages/sanity-suite/public/v3/eventFiltering/index-cdn.html
+++ b/packages/sanity-suite/public/v3/eventFiltering/index-cdn.html
@@ -23,7 +23,7 @@
       window.OnetrustActiveGroups = ',C0001,C0003,';
 
       var sdkBaseUrl = "https://cdn.rudderlabs.com/beta/3.0.0-beta";
-      var sdkName = "rudder-analytics.min.js";
+      var sdkName = "rsa.min.js";
       var asyncScript = true;
       window.rudderAnalyticsBuildType = "legacy";
       window.rudderanalytics = [];
@@ -123,7 +123,7 @@
     </style>
     <script
       async
-      src="https://cdn.rudderlabs.com/__CDN_VERSION_PATH__rudder-analytics__STAGING_FILE_PATH__.min.js"
+      src="https://cdn.rudderlabs.com/__CDN_VERSION_PATH__rsa__STAGING_FILE_PATH__.min.js"
     ></script>
   </head>
   <body>
