feat: attach beacon flush on visibility change event hidden value

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,11 @@
       {
         logLevel: 'DEBUG',
         configUrl: '__CONFIG_SERVER_HOST__',
-        destSDKBaseURL: '__DEST_SDK_BASE_URL__'
+        destSDKBaseURL: '__DEST_SDK_BASE_URL__',
+        // useBeacon: true,
+        // beaconQueueOptions: {
+        //   flushQueueInterval: 60 * 1000,
+        // }
       }
     );
 
