refactor: restore storage encryption plugins

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -54,6 +54,11 @@
         // beaconQueueOptions: {
         //   flushQueueInterval: 60 * 1000,
         // }
+        storage: {
+          encryption: {
+            version: 'v1.1'
+          },
+        }
       };
 
       rudderanalytics.load(
