feat: implement storage migrator plugin

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -54,11 +54,12 @@
         // beaconQueueOptions: {
         //   flushQueueInterval: 60 * 1000,
         // }
-        storage: {
-          encryption: {
-            version: 'v1.1'
-          },
-        }
+        // storage: {
+        //   encryption: {
+        //     version: 'v1.1'
+        //   },
+        //   migrate: true,
+        // }
       };
 
       rudderanalytics.load(
