--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -50,13 +50,21 @@
         configUrl: '__CONFIG_SERVER_HOST__',
         destSDKBaseURL: '__DEST_SDK_BASE_URL__' + window.rudderAnalyticsBuildType + '/js-integrations',
         pluginsSDKBaseURL: '__PLUGINS_BASE_URL__' + window.rudderAnalyticsBuildType + '/plugins',
+        // cookieConsentManager: {
+        //   // oneTrust: {
+        //   //   enabled: true,
+        //   // },
+        //   ketch: {
+        //     enabled: true,
+        //   }
+        // }
         // useBeacon: true,
         // beaconQueueOptions: {
         //   flushQueueInterval: 60 * 1000,
         // }
         // storage: {
         //   encryption: {
-        //     version: 'v1.1'
+        //     version: 'v3'
         //   },
         //   migrate: true,
         // }
