test: add sanity suite test case for sourceConfig API endpoint

--- a/sanity-suite/public/eventFiltering/index-npm.html
+++ b/sanity-suite/public/eventFiltering/index-npm.html
@@ -49,6 +49,9 @@
           };
         })(method);
       }
+
+      window.userWriteKey = '__FEATURE_EVENT_FILTERING_WRITE_KEY__';
+      window.userConfigUrl = '__CONFIG_SERVER_HOST__';
     </script>
     <link
       rel="stylesheet"
