--- a/sanity-suite/public/index-local.html
+++ b/sanity-suite/public/index-local.html
@@ -52,6 +52,9 @@
             })(method);
         }
 
+        window.userWriteKey = '__WRITE_KEY__';
+        window.userConfigUrl = '__CONFIG_SERVER_HOST__';
+
         rudderanalytics.load(
             '__WRITE_KEY__',
             '__DATAPLANE_URL__',
