--- a/sanity-suite/public/preloadBuffer/index-npm.html
+++ b/sanity-suite/public/preloadBuffer/index-npm.html
@@ -49,6 +49,9 @@
           };
         })(method);
       }
+
+      window.userWriteKey = '__FEATURE_PRELOAD_BUFFER_WRITE_KEY__';
+      window.userConfigUrl = '__CONFIG_SERVER_HOST__';
     </script>
     <link
       rel="stylesheet"
