feat: configurable storage type

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -2,27 +2,45 @@
 <html>
   <head>
     <script>
-      var sdkBaseUrl = "https://cdn.rudderlabs.com/beta/3.0.0-beta";
-      var sdkName = "rsa.min.js";
+      var sdkBaseUrl = 'https://cdn.rudderlabs.com/beta/3.0.0-beta';
+      var sdkName = 'rsa.min.js';
       var asyncScript = true;
-      window.rudderAnalyticsBuildType = "legacy";
+      window.rudderAnalyticsBuildType = 'legacy';
       window.rudderanalytics = [];
-      var methods = [ "setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "getAnonymousId", "setAnonymousId", "startSession", "endSession", "getSessionId" ];
+      var methods = [
+        'setDefaultInstanceKey',
+        'load',
+        'ready',
+        'page',
+        'track',
+        'identify',
+        'alias',
+        'group',
+        'reset',
+        'getAnonymousId',
+        'setAnonymousId',
+        'startSession',
+        'endSession',
+        'getSessionId',
+      ];
       for (var i = 0; i < methods.length; i++) {
         var method = methods[i];
-        window.rudderanalytics[method] = function(methodName) {
-          return function() {
-            window.rudderanalytics.push([ methodName ].concat(Array.prototype.slice.call(arguments)));
+        window.rudderanalytics[method] = (function (methodName) {
+          return function () {
+            window.rudderanalytics.push([methodName].concat(Array.prototype.slice.call(arguments)));
           };
-        }(method);
+        })(method);
       }
       try {
         new Function('return import("")');
-        window.rudderAnalyticsBuildType = "modern";
+        window.rudderAnalyticsBuildType = 'modern';
       } catch (e) {}
-      window.rudderAnalyticsMount = function() {
-        var rudderAnalyticsScript = document.createElement("script");
-        rudderAnalyticsScript.src = "".concat(sdkBaseUrl, "/").concat(window.rudderAnalyticsBuildType, "/").concat(sdkName);
+      window.rudderAnalyticsMount = function () {
+        var rudderAnalyticsScript = document.createElement('script');
+        rudderAnalyticsScript.src = ''
+          .concat(sdkBaseUrl, '/')
+          .concat(window.rudderAnalyticsBuildType, '/')
+          .concat(sdkName);
         rudderAnalyticsScript.async = asyncScript;
         // Commented out as the local build file is auto-injected by rollup
         // if (document.head) {
@@ -31,9 +49,10 @@
         //   document.body.appendChild(rudderAnalyticsScript);
         // }
       };
-      if (typeof Promise === "undefined") {
-        var rudderAnalyticsPromisesScript = document.createElement("script");
-        rudderAnalyticsPromisesScript.src = "https://polyfill.io/v3/polyfill.min.js?features=globalThis%2CPromise&callback=rudderAnalyticsMount";
+      if (typeof Promise === 'undefined') {
+        var rudderAnalyticsPromisesScript = document.createElement('script');
+        rudderAnalyticsPromisesScript.src =
+          'https://polyfill.io/v3/polyfill.min.js?features=globalThis%2CPromise&callback=rudderAnalyticsMount';
         rudderAnalyticsPromisesScript.async = asyncScript;
         if (document.head) {
           document.head.appendChild(rudderAnalyticsPromisesScript);
@@ -45,10 +64,11 @@
       }
       // New addition to load script ends
 
-      var loadOptions={
+      var loadOptions = {
         logLevel: 'DEBUG',
         configUrl: '__CONFIG_SERVER_HOST__',
-        destSDKBaseURL: '__DEST_SDK_BASE_URL__' + window.rudderAnalyticsBuildType + '/js-integrations',
+        destSDKBaseURL:
+          '__DEST_SDK_BASE_URL__' + window.rudderAnalyticsBuildType + '/js-integrations',
         pluginsSDKBaseURL: '__PLUGINS_BASE_URL__' + window.rudderAnalyticsBuildType + '/plugins',
         // cookieConsentManager: {
         //   // oneTrust: {
@@ -62,19 +82,16 @@
         // beaconQueueOptions: {
         //   flushQueueInterval: 60 * 1000,
         // }
-        // storage: {
-        //   encryption: {
-        //     version: 'v3'
-        //   },
-        //   migrate: true,
-        // }
+        storage: {
+          // encryption: {
+          //   version: 'v3'
+          // },
+          // migrate: true,
+          // type: 'memoryStorage',
+        },
       };
 
-      rudderanalytics.load(
-        '__WRITE_KEY__',
-        '__DATAPLANE_URL__',
-        loadOptions
-      );
+      rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', loadOptions);
 
       rudderanalytics.identify(
         'customUserID',
@@ -91,9 +108,9 @@
           street: 'Sample Address',
           state: 'TX',
         },
-        function(message) {
+        function (message) {
           console.log('in identify call', message);
-        }
+        },
       );
 
       rudderanalytics.page(
@@ -106,9 +123,9 @@
           title: '',
           url: '',
         },
-        function(message) {
+        function (message) {
           console.log('in page call', message);
-        }
+        },
       );
 
       rudderanalytics.track(
@@ -118,9 +135,9 @@
           currency: 'USD',
           user_actual_id: 12345,
         },
-        function(message) {
+        function (message) {
           console.log('in track call 1', message);
-        }
+        },
       );
 
       rudderanalytics.track(
@@ -130,9 +147,9 @@
           currency: 'INR',
           user_actual_id: 333,
         },
-        function(message) {
+        function (message) {
           console.log('in track call 2', message);
-        }
+        },
       );
 
       rudderanalytics.track(
@@ -142,12 +159,12 @@
           currency: 'EUR',
           user_actual_id: 5678,
         },
-        function(message) {
+        function (message) {
           console.log('in track call 3', message);
-        }
+        },
       );
 
-      rudderanalytics.ready(function() {
+      rudderanalytics.ready(function () {
         console.log('All ready!!!');
       });
     </script>
@@ -177,11 +194,11 @@
             title: '',
             url: '',
           },
-          function(rudderElement) {
+          function (rudderElement) {
             console.log('in page call');
             document.getElementById('action').innerHTML = 'Page called';
             document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
-          }
+          },
         );
       }
 
@@ -202,11 +219,11 @@
             state: 'TX',
           },
           {},
-          function(rudderElement) {
+          function (rudderElement) {
             console.log('in identify call');
             document.getElementById('action').innerHTML = 'Identify called';
             document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
-          }
+          },
         );
       }
 
@@ -218,23 +235,20 @@
             currency: 'USD',
             user_actual_id: 12345,
           },
-          function(rudderElement) {
+          function (rudderElement) {
             console.log('in track call');
             document.getElementById('action').innerHTML = 'Track called';
             document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
-          }
+          },
         );
       }
 
       function alias() {
-        rudderanalytics.alias(
-          'alias-user-id',
-          function(rudderElement) {
-            console.log('alias call');
-            document.getElementById('action').innerHTML = 'Alias called';
-            document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
-          }
-        );
+        rudderanalytics.alias('alias-user-id', function (rudderElement) {
+          console.log('alias call');
+          document.getElementById('action').innerHTML = 'Alias called';
+          document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
+        });
       }
 
       function group() {
@@ -244,11 +258,11 @@
             name: 'Apple Inc.',
             location: 'USA',
           },
-          function(rudderElement) {
+          function (rudderElement) {
             console.log('group call');
             document.getElementById('action').innerHTML = 'Group called';
             document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
-          }
+          },
         );
       }
     </script>
