chore(monorepo): clean up configs after develop & main branch addition

--- a/packages/sanity-suite/public/v3/eventFiltering/index-cdn.html
+++ b/packages/sanity-suite/public/v3/eventFiltering/index-cdn.html
@@ -74,6 +74,9 @@
             enabled: true,
           },
         },
+        storage: {
+          migrate: true
+        }
       };
 
       rudderanalytics.load(
