--- a/packages/sanity-suite/public/v3/index-local.html
+++ b/packages/sanity-suite/public/v3/index-local.html
@@ -89,6 +89,9 @@
             enabled: true,
           },
         },
+        storage: {
+          migrate: true
+        }
       };
 
       rudderanalytics.load(
