--- a/packages/sanity-suite/public/v3/preloadBuffer/index-cdn.html
+++ b/packages/sanity-suite/public/v3/preloadBuffer/index-cdn.html
@@ -88,6 +88,9 @@
             enabled: true,
           },
         },
+        storage: {
+          migrate: true
+        }
       };
 
       rudderanalytics.load(
