--- a/packages/sanity-suite/public/v3/preloadBuffer/index-cdn.html
+++ b/packages/sanity-suite/public/v3/preloadBuffer/index-cdn.html
@@ -70,11 +70,11 @@
 
       // Identify call
       rudderanalytics.identify("12345", {
-        name: "Automation QA"
+        name: "Automation_QA"
       });
 
       // Track call
-      rudderanalytics.track("test event", {
+      rudderanalytics.track("test_event", {
         testProp: "automationQA_prop1"
       });
 
