--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -55,6 +55,7 @@
         destSDKBaseURL:
           '__DEST_SDK_BASE_URL__' + window.rudderAnalyticsBuildType + '/js-integrations',
         pluginsSDKBaseURL: '__PLUGINS_BASE_URL__' + window.rudderAnalyticsBuildType + '/plugins',
+        sameSiteCookie: "asdf",
         // cookieConsentManager: {
         //   // oneTrust: {
         //   //   enabled: true,
@@ -95,7 +96,7 @@
         },
         function (message) {
           console.log('in identify call', message);
-        },
+        }
       );
 
       rudderanalytics.page(
@@ -110,7 +111,7 @@
         },
         function (message) {
           console.log('in page call', message);
-        },
+        }
       );
 
       rudderanalytics.track(
@@ -122,7 +123,7 @@
         },
         function (message) {
           console.log('in track call 1', message);
-        },
+        }
       );
 
       rudderanalytics.track(
@@ -134,7 +135,7 @@
         },
         function (message) {
           console.log('in track call 2', message);
-        },
+        }
       );
 
       rudderanalytics.track(
@@ -146,7 +147,7 @@
         },
         function (message) {
           console.log('in track call 3', message);
-        },
+        }
       );
 
       rudderanalytics.ready(function () {
@@ -183,7 +184,7 @@
             console.log('in page call');
             document.getElementById('action').innerHTML = 'Page called';
             document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
-          },
+          }
         );
       }
 
@@ -208,7 +209,7 @@
             console.log('in identify call');
             document.getElementById('action').innerHTML = 'Identify called';
             document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
-          },
+          }
         );
       }
 
@@ -224,7 +225,7 @@
             console.log('in track call');
             document.getElementById('action').innerHTML = 'Track called';
             document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
-          },
+          }
         );
       }
 
@@ -247,7 +248,7 @@
             console.log('group call');
             document.getElementById('action').innerHTML = 'Group called';
             document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
-          },
+          }
         );
       }
     </script>
