test: fix sanity suite v3 configs

--- a/packages/sanity-suite/public/v3/index-cdn.html
+++ b/packages/sanity-suite/public/v3/index-cdn.html
@@ -102,6 +102,9 @@
       rudderanalytics.ready(function () {
         console.log('We are all set!!!');
       });
+
+      window.userWriteKey = '__WRITE_KEY__';
+      window.userConfigUrl = '__CONFIG_SERVER_HOST__';
     </script>
     <link
       rel="stylesheet"
