--- a/packages/sanity-suite/public/v3/eventFiltering/index-cdn.html
+++ b/packages/sanity-suite/public/v3/eventFiltering/index-cdn.html
@@ -88,6 +88,9 @@
       rudderanalytics.ready(function () {
         console.log('We are all set!!!');
       });
+
+      window.userWriteKey = '__FEATURE_EVENT_FILTERING_WRITE_KEY__';
+      window.userConfigUrl = '__CONFIG_SERVER_HOST__';
     </script>
     <link
       rel="stylesheet"
