--- a/packages/sanity-suite/public/v3/index-local.html
+++ b/packages/sanity-suite/public/v3/index-local.html
@@ -103,6 +103,9 @@
       rudderanalytics.ready(function () {
         console.log('We are all set!!!');
       });
+
+      window.userWriteKey = '__WRITE_KEY__';
+      window.userConfigUrl = '__CONFIG_SERVER_HOST__';
     </script>
     <link
       rel="stylesheet"
