--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -7,7 +7,20 @@
       var asyncScript = true;
       window.rudderAnalyticsBuildType = 'legacy';
       window.rudderanalytics = [];
-      var methods = [ "setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "setAnonymousId", "startSession", "endSession" ];
+      var methods = [
+        'setDefaultInstanceKey',
+        'load',
+        'ready',
+        'page',
+        'track',
+        'identify',
+        'alias',
+        'group',
+        'reset',
+        'setAnonymousId',
+        'startSession',
+        'endSession',
+      ];
       for (var i = 0; i < methods.length; i++) {
         var method = methods[i];
         window.rudderanalytics[method] = (function (methodName) {
@@ -72,7 +85,21 @@
           //   version: 'v3'
           // },
           // migrate: true,
-          // type: 'memoryStorage',
+          // type: 'localStorage',
+          // entries: {
+          //   userId: {
+          //     type: 'cookieStorage',
+          //   },
+          //   userTraits: {
+          //     type: 'localStorage',
+          //   },
+          //   groupId: {
+          //     type: 'none',
+          //   },
+          //   anonymousId: {
+          //     type: 'cookieStorage',
+          //   },
+          // },
         },
       };
 
