--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -84,6 +84,12 @@
           // encryption: {
           //   version: 'v3'
           // },
+          // cookie: {
+          //   expires: new Date(Date.now() + 30 * 24 * 60 * 60 * 1000),
+          //   path: '/',
+          //   samesite: 'Lax',
+          //   secure: true,
+          // },
           // migrate: true,
           // type: 'localStorage',
           // entries: {
