chore(test): add missing sanity suite files

--- a/packages/sanity-suite/public/v1.1/dataResidency/index-local.html
+++ b/packages/sanity-suite/public/v1.1/dataResidency/index-local.html
@@ -49,11 +49,11 @@
             })(method);
         }
 
-        window.userWriteKey = '__WRITE_KEY__';
+        window.userWriteKey = '__FEATURE_DATA_RESIDENCY_WRITE_KEY__';
         window.userConfigUrl = '__CONFIG_SERVER_HOST__';
 
         rudderanalytics.load(
-            '__WRITE_KEY__',
+            '__FEATURE_DATA_RESIDENCY_WRITE_KEY__',
             '__DATAPLANE_URL__',
             {
                 logLevel: 'DEBUG',
