--- a/packages/sanity-suite/public/v1.1/index-npm.html
+++ b/packages/sanity-suite/public/v1.1/index-npm.html
@@ -47,7 +47,7 @@
         })(method);
       }
 
-      window.userWriteKey = '__FEATURE_PRELOAD_BUFFER_WRITE_KEY__';
+      window.userWriteKey = '__WRITE_KEY__';
       window.userConfigUrl = '__CONFIG_SERVER_HOST__';
     </script>
     <link
