--- a/packages/sanity-suite/public/v1.1/dataResidency/index-npm.html
+++ b/packages/sanity-suite/public/v1.1/dataResidency/index-npm.html
@@ -47,23 +47,8 @@
         })(method);
       }
 
-      window.userWriteKey = '__WRITE_KEY__';
+      window.userWriteKey = '__FEATURE_DATA_RESIDENCY_WRITE_KEY__';
       window.userConfigUrl = '__CONFIG_SERVER_HOST__';
-
-      rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', {
-        logLevel: 'DEBUG',
-        configUrl: '__CONFIG_SERVER_HOST__',
-        destSDKBaseURL: '__DEST_SDK_BASE_URL__',
-        cookieConsentManager: {
-            oneTrust: {
-                enabled: true,
-            }
-        }
-      });
-
-      rudderanalytics.ready(function() {
-        console.log('We are all set!!!');
-      });
     </script>
     <link
       rel="stylesheet"
@@ -100,10 +85,6 @@
         overflow: hidden;
       }
     </style>
-    <script
-      async
-      src="https://cdn.rudderlabs.com/__CDN_VERSION_PATH__rudder-analytics__STAGING_FILE_PATH__.min.js"
-    ></script>
   </head>
   <body>
     <div class="container-xxl">
