--- a/examples/v3/index.html
+++ b/examples/v3/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>RudderStack JS SDK v3 Example</title>
     <script>
-      var sdkBaseUrl = 'https://cdn.rudderlabs.com/beta/3.0.0-beta';
+      var sdkBaseUrl = 'https://cdn.rudderlabs.com/v3';
       var sdkName = 'rsa.min.js';
       var asyncScript = true;
       window.rudderAnalyticsBuildType = 'legacy';
