--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script>
-      var sdkBaseUrl = 'https://cdn.rudderlabs.com/beta/3.0.0-beta';
+      var sdkBaseUrl = 'https://cdn.rudderlabs.com/v3';
       var sdkName = 'rsa.min.js';
       var asyncScript = true;
       window.rudderAnalyticsBuildType = 'legacy';
