--- a/packages/sanity-suite/public/v3/dataResidency/index-local.html
+++ b/packages/sanity-suite/public/v3/dataResidency/index-local.html
@@ -22,7 +22,7 @@
       };
       window.OnetrustActiveGroups = ',C0001,C0003,';
 
-      var sdkBaseUrl = "https://cdn.rudderlabs.com/beta/3.0.0-beta";
+      var sdkBaseUrl = "https://cdn.rudderlabs.com/v3";
       var sdkName = "rsa.min.js";
       var asyncScript = true;
       window.rudderAnalyticsBuildType = "legacy";
