refactor(analytics-js-plugins): sample rollup config for merging chunks

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -107,6 +107,10 @@
           //   },
           // },
         },
+        // plugins: [
+        //   'StorageEncryption',
+        //   'XhrQueue'
+        // ]
       };
 
       rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', loadOptions);
