--- a/packages/sanity-suite/public/v3/preloadBuffer/index-cdn.html
+++ b/packages/sanity-suite/public/v3/preloadBuffer/index-cdn.html
@@ -22,7 +22,7 @@
       };
       window.OnetrustActiveGroups = ',C0001,C0003,';
 
-      var sdkBaseUrl = "https://cdn.rudderlabs.com/v3";
+      var sdkBaseUrl = "https://cdn.rudderlabs.com/__CDN_VERSION_PATH__";
       var sdkName = "rsa.min.js";
       var asyncScript = true;
       window.rudderAnalyticsBuildType = "legacy";
