feat: use local storage for beacon plugin

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -84,6 +84,7 @@
         // useBeacon: true,
         // beaconQueueOptions: {
         //   flushQueueInterval: 10 * 1000,
+        //   maxItems: 5,
         // },
         // storage: {
           // encryption: {
