refactor(analytics-js-integrations): remove the -staging filename part

--- a/packages/analytics-js-integrations/src/integrations/Amplitude/test/test_amplitude.html
+++ b/packages/analytics-js-integrations/src/integrations/Amplitude/test/test_amplitude.html
@@ -17,7 +17,7 @@
         configUrl: 'http://localhost:5000/sourceConfig',
       });
     </script>
-    <script src="https://cdn.rudderlabs.com/v1.1/rudder-analytics-staging.min.js"></script>
+    <script src="https://cdn.rudderlabs.com/staging/latest/v1.1/rudder-analytics.min.js"></script>
     <script>
       rudderanalytics.page();
       /*
