--- a/packages/analytics-js-integrations/src/integrations/Posthog/test/test_posthog.html
+++ b/packages/analytics-js-integrations/src/integrations/Posthog/test/test_posthog.html
@@ -17,7 +17,7 @@
         loadIntegration: false,
       });
     </script>
-    <script src="https://cdn.rudderlabs.com/v1.1/rudder-analytics-staging.min.js"></script>
+    <script src="https://cdn.rudderlabs.com/staging/latest/v1.1/rudder-analytics.min.js"></script>
     <script>
       rudderanalytics.page();
       rudderanalytics.identify(
