fix(analytics-js): correct read post consent data

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -122,6 +122,13 @@
           //     type: 'cookieStorage',
           //   },
           // },
+        // },
+        // consentManagement: {
+        //   enabled: true,
+        //   provider: "custom",
+        // },
+        // preConsent: {
+        //   enabled: true
         }
         // plugins: [
         //   'StorageEncryption',
